--- a/requirements.txt
+++ b/requirements.txt
@@ -1,42 +1,50 @@
 # ============================================
 # FIAP IA FarmTech System - Unified Requirements
 # ============================================
+# Python Version: 3.12.3
+# Target Environment: Linux (CPU-only)
+# Last Updated: 2025-11-21
+#
 # Este arquivo contém todas as dependências necessárias para rodar
 # o sistema completo de Agritech com 6 fases integradas
 
 # ============================================
 # Dashboard & Visualization (Streamlit)
 # ============================================
-streamlit==1.35.0
-plotly==5.22.0
+streamlit==1.39.0
+plotly==5.24.1
 
 # ============================================
 # Data Processing & Analysis
 # ============================================
-pandas==2.2.2
-numpy==1.26.4
-matplotlib==3.9.0
+pandas==2.2.3
+numpy==2.1.3
+matplotlib==3.9.2
 seaborn==0.13.2
 
 # ============================================
 # Machine Learning (Fase 4)
 # ============================================
-scikit-learn==1.5.0
+scikit-learn==1.5.2
 joblib==1.4.2
 
 # ============================================
 # Computer Vision & YOLO (Fase 6)
 # ============================================
-torch==2.3.0
-torchvision==0.18.0
-opencv-python==4.10.0.84
-Pillow==10.3.0
-ultralytics==8.2.31
+# PyTorch CPU-only (compatível com Python 3.12)
+torch==2.5.1
+torchvision==0.20.1
+# OpenCV headless (sem dependências GUI - ideal para servidores)
+opencv-python-headless==4.10.0.84
+Pillow==11.0.0
+# Ultralytics YOLOv8/v11 (atualizado para Python 3.12)
+ultralytics==8.3.29
 
 # ============================================
 # AWS Integration (Fase 5 & Ir Além 1)
 # ============================================
-boto3==1.34.110
+boto3==1.35.67
+botocore==1.35.67
 
 # ============================================
 # Database & Web Requests
@@ -47,21 +55,39 @@ python-dotenv==1.0.1
 # ============================================
 # R Integration (Opcional - Fase 1)
 # ============================================
-# rpy2==3.5.15
-# Comentado por padrão pois requer instalação do R
-# Descomente se precisar rodar scripts R via Python
-# Requer: R instalado no sistema + pacotes R necessários
+# rpy2==3.5.16
+# ⚠️ Comentado por padrão pois requer:
+#    1. R instalado no sistema (apt install r-base)
+#    2. Compiladores C/C++ (build-essential)
+#    3. Bibliotecas R necessárias
+# Descomente APENAS se precisar rodar scripts R via Python
 
 # ============================================
 # Development & Testing (Opcional)
 # ============================================
-pytest==8.2.1
-pytest-cov==5.0.0
-black==24.4.2
-flake8==7.0.0
+pytest==8.3.3
+pytest-cov==6.0.0
+black==24.10.0
+flake8==7.1.1
 
 # ============================================
 # Genetic Algorithms (Ir Além 2)
 # ============================================
-# Já incluído: numpy (para operações genéticas)
-# Já incluído: matplotlib (para visualização de fitness)
+# Dependências já incluídas:
+# - numpy (operações genéticas)
+# - matplotlib (visualização de fitness)
+# - pandas (gestão de população)
+
+# ============================================
+# NOTAS DE INSTALAÇÃO
+# ============================================
+# Para instalar todas as dependências:
+#   pip install -r requirements.txt
+#
+# Para instalar apenas produção (sem dev tools):
+#   pip install streamlit pandas numpy matplotlib seaborn scikit-learn \
+#               torch torchvision opencv-python-headless Pillow ultralytics \
+#               boto3 requests python-dotenv
+#
+# Se encontrar erro com PyTorch, instale manualmente:
+#   pip install torch torchvision --index-url https://download.pytorch.org/whl/cpu
