--- a/requirements.txt
+++ b/requirements.txt
@@ -47,7 +47,13 @@ boto3==1.35.67
 botocore==1.35.67
 
 # ============================================
-# Database & Web Requests
+# Database & ORM (SQLAlchemy + Alembic)
+# ============================================
+SQLAlchemy==2.0.23
+alembic==1.13.1
+
+# ============================================
+# Web Requests & Environment
 # ============================================
 requests==2.32.3
 python-dotenv==1.0.1
